--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,12 +42,16 @@ chrono = { version = "0.4", features = ["serde"] }
 # Decimal numbers for financial calculations
 rust_decimal = { version = "1.36", features = ["serde", "db-postgres"] }
 
+# API Documentation
+utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid", "decimal"] }
+utoipa-swagger-ui = { version = "9", features = ["axum"] }
+
 [dev-dependencies]
 # Testing framework
 tokio-test = "0.4"
 
 # HTTP testing
-axum-test = "15"
+axum-test = "18"
 reqwest = { version = "0.12", features = ["json"] }
 
 # Assertions & utilities
