--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,7 @@ DATABASE_URL=postgresql://infotitans:swift1FEMZY14@10.27.27.66:34155/ledger_forg
 JWT_SECRET=test-secret-key-for-testing-only
 PORT=3001
 RUST_LOG=debug
+
+# Test Redis Configuration
+TEST_REDIS_URL=redis://10.27.27.66:37263
+REDIS_URL=redis://10.27.27.66:37263
