--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,11 @@ JWT_SECRET=your-secret-key-change-this-in-production
 JWT_EXPIRY=1800  # 30 minutes in seconds
 JWT_REFRESH_EXPIRY=604800  # 7 days in seconds
 
+# Redis Configuration (Network Cache Server)
+REDIS_URL=redis://10.27.27.66:37263
+CACHE_TTL_BALANCE=300      # 5 minutes for account balances
+CACHE_TTL_HIERARCHY=1800   # 30 minutes for account hierarchy
+CACHE_TTL_SESSION=900      # 15 minutes for user sessions
+
 # Application
 RUST_LOG=debug
