--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,10 @@ rust_decimal = { version = "1.36", features = ["serde", "db-postgres"] }
 utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid", "decimal"] }
 utoipa-swagger-ui = { version = "9", features = ["axum"] }
 
+# Redis Caching
+redis = { version = "0.27", features = ["tokio-comp"] }
+serde-redis = "0.14"
+
 [dev-dependencies]
 # Testing framework
 tokio-test = "0.4"
