Implement ContactService with CRUD operations and caching
- Added ContactService with methods to create, read, update, and delete contacts.
- Implemented caching for contact retrieval to improve performance.
- Created tests for ContactService covering various scenarios including creation, retrieval, updating, and deletion of contacts.
- Added validation for contact creation requests to ensure data integrity.
- Implemented filtering and limiting functionality for listing contacts.
- Added convenience methods to retrieve customers, vendors, and employees.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,8 +47,7 @@ utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid", "decimal"
 utoipa-swagger-ui = { version = "9", features = ["axum"] }
 
 # Redis Caching
-redis = { version = "0.27", features = ["tokio-comp"] }
-serde-redis = "0.14"
+redis = { version = "0.27", features = ["tokio-comp", "json"] }
 
 [dev-dependencies]
 # Testing framework
