--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,18 @@ name = "ledger-forge"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "ledger-forge"
+path = "src/main.rs"
+
+[[bin]]
+name = "seed"
+path = "src/bin/seed.rs"
+
+[[bin]]
+name = "clear"
+path = "src/bin/clear.rs"
+
 [dependencies]
 # Web framework
 axum = "0.8.6"
