--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ utoipa-swagger-ui = { version = "9", features = ["axum"] }
 
 # Redis Caching
 redis = { version = "0.27", features = ["tokio-comp", "json"] }
+reporting = "0.1.4"
 
 [dev-dependencies]
 # Testing framework
