feat: Implement Bill Management API with CRUD operations and integrate into the application

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ DATABASE_URL=postgresql://infotitans:swift1FEMZY14@10.27.27.66:34155/ledger_forg
 HOST=127.0.0.1
 PORT=3000
 
+# Environment (development, staging, production)
+ENVIRONMENT=development
+
 # JWT Configuration
 JWT_SECRET=your-secret-key-change-this-in-production
 JWT_EXPIRY=1800  # 30 minutes in seconds
