--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,6 @@ path = "src/bin/clear.rs"
 # Web framework
 axum = "0.8.6"
 tokio = { version = "1.47", features = ["full"] }
-tower = "0.5"
 tower-http = { version = "0.6", features = ["cors", "trace"] }
 
 # Database
@@ -30,7 +29,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # Authentication & Security
-jsonwebtoken = "9"
+jsonwebtoken = { version = "10.0.0", features = ["use_pem", "aws_lc_rs"] }
 argon2 = "0.5"
 uuid = { version = "1.18", features = ["v4", "serde"] }
 
@@ -39,7 +38,6 @@ dotenvy = "0.15"
 
 # Error Handling
 anyhow = "1.0"
-thiserror = "1.0"
 
 # Validation
 validator = { version = "0.20", features = ["derive"] }
@@ -59,12 +57,13 @@ utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid", "decimal"
 utoipa-swagger-ui = { version = "9", features = ["axum"] }
 
 # Redis Caching
-redis = { version = "0.27", features = ["tokio-comp", "json"] }
-reporting = "0.1.4"
+redis = { version = "0.32.7", features = ["tokio-comp", "json"] }
+
+# CSV parsing
+csv = "1.3"
 
 [dev-dependencies]
 # Testing framework
-tokio-test = "0.4"
 
 # HTTP testing
 axum-test = "18"
@@ -76,6 +75,4 @@ reqwest = { version = "0.12", features = ["json"] }
 serial_test = "3.0"
 
 # Assertions & utilities
-assert-json-diff = "2.0"
-fake = { version = "2.9", features = ["derive"] }
-
+fake = { version = "4.4.0", features = ["derive"] }
