--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,14 @@ path = "src/bin/seed.rs"
 name = "clear"
 path = "src/bin/clear.rs"
 
+[[bin]]
+name = "import-quickbooks"
+path = "src/bin/import_quickbooks.rs"
+
+[[bin]]
+name = "verify-import"
+path = "src/bin/verify_import.rs"
+
 [dependencies]
 # Web framework
 axum = "0.8.6"
@@ -60,6 +68,9 @@ utoipa-swagger-ui = { version = "9", features = ["axum"] }
 redis = { version = "0.32.7", features = ["tokio-comp", "json"] }
 
 # CSV parsing
+csv = "1.3"
+
+# CSV parsing for data import
 csv = "1.3"
 
 [dev-dependencies]
