--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ rust_decimal = { version = "1.36", features = ["serde"] }
 web-sys = { version = "0.3", features = ["Storage", "Window"] }
 wasm-bindgen = "0.2"
 gloo-timers = { version = "0.3", features = ["futures"] }
+js-sys = "0.3"
 
 # Logging
 console_error_panic_hook = "0.1"
